--- a/graphql-database-manager-dynamo/pom.xml
+++ b/graphql-database-manager-dynamo/pom.xml
@@ -59,6 +59,18 @@
             <organizationUrl>http://www.fleetpin.co.nz</organizationUrl>
         </developer>
     </developers>
+    
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>software.amazon.awssdk</groupId>
+                <artifactId>bom</artifactId>
+                <version>2.10.62</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
         <dependency>
